Fixed gaps. Added updated scroll section for small screens

--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,43 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    text-align: center;
 }
 
 
 .carousel-item {
     gap: 32px;
+}
+
+.section{
+    padding-bottom: 110px;
+}
+
+.text-center-wout-important{
+    text-align: center;
+}
+.section-two-big-screen{
+    display: flex;
+}
+.section-two-small-screen{
+    display: none;
+}
+
+@media (max-width: 767.98px) {
+    .section-two-big-screen{
+        display: none;
+    }
+    .section-two-small-screen{
+        display: flex;
+    }
+    .section{
+        padding-top: 0;
+        padding-bottom: 20px;
+    }
+}
+
+@media (max-width: 420px) {
+    .section{
+        text-align: left;
+    }
 }
